--- a/index.html
+++ b/index.html
@@ -3,42 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de médias</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Martel&family=Roboto:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <title>Agenda de Telefone</title>
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="./images/logo.png" alt="capelo e diploma">
-            <h1>Calculadora de médias</h1>
+            <img src="./images/telefone.png" alt="telefone">
+            <h1>Agenda de Telefone</h1>
         </header>
-        <form id="form-atividade">
-            <input type="text" id="nome-atividade" required placeholder="Nome da atividade"/>
-            <input type="number" id="nota-atividade" required placeholder="Nota" min="0" max="10"/>
-            <button type="submit">Adicionar +</button>
+        <form id="form-numeros">
+            <input type="text" id="nome-contato" required placeholder="Nome"/>
+            <input type="tel" id="phone" required placeholder="Telefone">
+            <button type="submit">Cadastrar</button>
         </form>
         <table cellspacing="0">
             <thead>
                 <tr>
                     <th>
-                        Nome da atividade
+                        Nome do Contato
                     </th>
-                    <th>Nota da atividade</th>
-                    <th>Aprovado</th>
+                    <th>Numero de Telefone</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td>Media Final</td>
-                    <td id="media-final-valor">---</td>
-                    <td id="media-final-resultado">---</td>
-                </tr>
-            </tfoot>
         </table>
     </div>
     <script src="./main.js"></script>
